--- a/ansible/group_vars/group_vars.yml
+++ b/ansible/group_vars/group_vars.yml
@@ -1,4 +1,4 @@
 ---
 subdomain:
-    - "kompetenzdatenbank.correlaid.org"
+    - "kompetenzdatenbank-dev.correlaid.org"
     - "kompetenzdatenbank.correlaid.org"
